@@ -1,8 +1,9 @@
 2006-09-04  Sven Neumann  <sven@gimp.org>
 
+	* app/display/gimpdisplayshell.c
 	* app/display/gimpdisplayshell-selection.c: more code cleanup.
-	Monitor the shell's window state and don't run the timeout if the
-	shell is withdrawn or iconified.
+	Monitor the shell's window visibility and don't run the timeout if
+	the shell is fully obscured.
 
 2006-09-04  Sven Neumann  <sven@gimp.org>
 
